fix: rename meta.json to meta-tags.json like in main repo, update templates

--- a/src/_includes/layouts/author.njk
+++ b/src/_includes/layouts/author.njk
@@ -3,7 +3,7 @@
 
 {% set title = author.name + " - " + site.title %}
 {% set canonicalUrl = site.url + author.path %}
-{% set defaultDescription %}{% t 'meta:description' %}{% endset %}
+{% set defaultDescription %}{% t 'meta-tags:description' %}{% endset %}
 
 {% block content %}
     {% include "partials/author-info.njk" %}
