--- a/src/_includes/layouts/feed.njk
+++ b/src/_includes/layouts/feed.njk
@@ -5,12 +5,12 @@
             <![CDATA[ freeCodeCamp.org ]]>
         </title>
         <description>
-            <![CDATA[ {% t 'meta:description' %} ]]>
+            <![CDATA[ {% t 'meta-tags:description' %} ]]>
         </description>
         <link>{{ site.url }}</link>
         <image>
             <url>{{ site.icon }}</url>
-            {% set metaTitle %}{% t 'meta:title' %}{% endset %}
+            {% set metaTitle %}{% t 'meta-tags:title' %}{% endset %}
             <title>{{ metaTitle | escape }}</title>
             <link>{{ site.url }}</link>
         </image>
