fix: simplify tag and post keys

--- a/src/404.njk
+++ b/src/404.njk
@@ -16,8 +16,8 @@ permalink: 404.html
             <div class="inner">
                 <section class="error-message">
                     <h1 class="error-code">404</h1>
-                    <p class="error-description">{% t '404-page.page-not-found' %}</p>
-                    <a class="error-link" href="{{ site.url }}">{% t '404-page.go-to-front-page' %} →</a>
+                    <p class="error-description">{% t '404.page-not-found' %}</p>
+                    <a class="error-link" href="{{ site.url }}">{% t '404.go-to-front-page' %} →</a>
                 </section>
             </div>
         </main>
