fix: flatten author object in translations.json

--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -36,7 +36,7 @@
                     <p>{{ author.bio }}</p>
                 {% else %}
                     <p>
-                        {% t 'author.byline.read-more', {
+                        {% t 'author.read-more', {
                             '<0>': '<a href="' + ( authorUrl ) + '">',
                             '</0>': '</a>',
                             role: localizedRole,
