--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -27,11 +27,11 @@
         {% endif %}
         <div class="author-stats">
             {% if postCount == 0 %}
-                {% t 'author.page.no-posts' %}
+                {% t 'author.no-posts' %}
             {% elif postCount == 1 %}
-                {% t 'author.page.one-post' %}
+                {% t 'author.one-post' %}
             {% else %}
-                {% t 'author.page.multiple-posts', { postCount: postCount } %}
+                {% t 'author.multiple-posts', { postCount: postCount } %}
             {% endif %}
             <span class="bull">
                 &bull;
