fix: prevent handle-ads script from being added to page when it shouldn't be

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -128,8 +128,10 @@
             if (postContent) fitVids(postContent);
         });
 
-        {# Toggle Google Ads #}
-        {% include "assets/js/handle-ads.js" %}
+        {% if adsEnabled and site.lang !== "zh" %}
+            {# Toggle Google Ads #}
+            {% include "assets/js/handle-ads.js" %}
+        {% endif %}
     {% endset %}
     <script>{{ js | jsMin | safe }}</script>
 {% endblock %}
