--- a/src/_includes/partials/ad.njk
+++ b/src/_includes/partials/ad.njk
@@ -7,3 +7,8 @@
         data-ad-format="auto"
     ></ins>
 </div>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    });
+</script>
