--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2367,41 +2367,55 @@ a.banner:hover span {
 /* 16. Ads
 /* ---------------------------------------------------------- */
 
-.post-and-sidebar {
-    /* display: grid set dynamically for unauthenticated readers */
+/* Hide ads by default for authenticated readers */
+.sidebar,
+.banner-ad {
+    display: none;
+}
+
+/* Apply the following styles for unauthenticated readers */
+.ad-layout .post-full-content {
+    padding: 70px 0 0;
+}
+
+.ad-layout .post-and-sidebar {
+    display: grid;
     grid-template-columns: minmax(0, 1fr) 300px;
     gap: 40px;
     margin: 0 auto;
 }
 
-.sidebar {
-    /* display: flex set dynamically for unauthenticated readers */
-    display: none;
+.ad-layout .sidebar {
+    display: flex;
     max-width: 300px;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.banner-ad {
-    display: none;
+.ad-layout .banner-ad {
+    display: block !important;
 }
 
-ins.adsbygoogle {
+.ad-layout .kg-width-wide .kg-image {
+    max-width: 720px;
+}
+
+.ad-layout ins.adsbygoogle {
     border: 3px solid var(--gray85);
 }
 
 /* Hide unfilled ads */
-ins.adsbygoogle[data-ad-status="unfilled"] {
+.ad-layout ins.adsbygoogle[data-ad-status="unfilled"] {
     display: none !important;
 }
 
+/* Hide sidebar for mobile readers */
 @media (max-width: 900px) {
-    /* Override dynamically set styles */
-    .post-and-sidebar {
-        display: block !important;
+    .ad-layout .post-and-sidebar {
+        display: block;
     }
 
-    .sidebar {
-        display: none !important;
+    .ad-layout .sidebar {
+        display: none;
     }
 }
