fix: add full image with and height attributes to prevent cls

--- a/src/_includes/partials/author-info.njk
+++ b/src/_includes/partials/author-info.njk
@@ -8,7 +8,8 @@
             "author-profile-image",
             author.name,
             "150px",
-            [150]
+            [150],
+            author.image_dimensions.profile_image
         %}
     {% endif %}
     <h1 data-test-label="author-name" class="site-title">{{ author.name }}</h1>
