--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -12,6 +12,7 @@
                 author.name,
                 "60px",
                 [60],
+                author.image_dimensions.profile_image,
                 lazy
             %}
         {% else %}
