--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -48,7 +48,8 @@
                             "(max-width: 800px) 400px,
                              (max-width: 1170px) 700px,
                              1400px",
-                            [300, 600, 1000, 2000]
+                            [300, 600, 1000, 2000],
+                            post.image_dimensions.feature_image
                         %}
                     </figure>
                 {% endif %}
