--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -21,7 +21,7 @@
                         {% 
                             featureImage
                             doc.feature_image,
-                            (doc.title | escape),
+                            (title | escape),
                             "(max-width: 800px) 400px,
                              (max-width: 1170px) 700px,
                              1400px",
