fix: simplify lazyload handling, adjust card and byline macros to lazyload below the fold

--- a/src/_includes/partials/byline.njk
+++ b/src/_includes/partials/byline.njk
@@ -1,5 +1,4 @@
 {% macro byline(author, siteLang, lazyLoad, showBio, role) %}
-    {% set lazy = 1 if lazyLoad else 0 %}
     {% set authorUrl %}{{ author.url if role == 'author' else (author.path | url) }}{% endset %}
     {% set localizedRole %}{% t "localization-meta.roles." + (role if role else "author") %}{% endset %}
 
@@ -13,7 +12,7 @@
                 "60px",
                 [60],
                 author.image_dimensions.profile_image,
-                lazy
+                lazyLoad
             %}
         {% else %}
             <span class="avatar-wrapper">{% include "partials/icons/avatar.njk" %}</span>
