--- a/src/_includes/partials/ad.njk
+++ b/src/_includes/partials/ad.njk
@@ -9,6 +9,6 @@
 </div>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
-        (adsbygoogle = window.adsbygoogle || []).push({});
+        if (notAuthenticated) (adsbygoogle = window.adsbygoogle || []).push({});
     });
 </script>
