--- a/src/_includes/layouts/doc.njk
+++ b/src/_includes/layouts/doc.njk
@@ -37,7 +37,7 @@
                     <hr />
 
                     {# Conditionally include partials based on Ghost language setting #}
-                    {% ifAsync site.lang == "zh" %}
+                    {% ifAsync site.lang === "zh" %}
                         {% include "partials/learn-cta-row.njk" %}
                     {% else %}
                         {% include "partials/social-row.njk" %}
