feat: port Yoko's PR to add Noto Sans JP font, move Google Fonts links to default.njk

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -817,6 +817,11 @@ make sure this only happens on large viewports / desktop-ish devices.
     background: #fff;
 }
 
+/* Japanese font */
+.post-full-content:lang(ja) {
+    font-family: 'Lato', 'Noto Sans JP', sans-serif;
+}
+
 @media (max-width: 500px) {
     .post-full-content {
         padding: 0;
