fix: update Google Font link for other locales

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -17,7 +17,7 @@
         {% if site.lang === 'ja' %}
             <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&family=Roboto+Mono:wght@400;700&display=swap">
         {% else %}
-            <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Roboto+Mono:400,700?&display=swap">
+            <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Roboto+Mono:wght@400;700&display=swap">
         {% endif %}
 
         {# Load Prism styles and scripts only for posts / pages #}
